<resources>
    <string name="app_name">Pokemon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="into">踏上旅程</string>
    <string name="welcome">WELCOME</string>
    <string name="usn">请输入用户名</string>
    <string name="psw">请输入密码</string>
    <string name="check">请确认密码</string>
    <string name="login">登录</string>
    <string name="commit">提交</string>
    <string name="register">快速注册</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="home">首 页</string>
    <string name="nearby">附 近</string>
    <string name="mine">我 的</string>

</resources>
