<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_bac"
    tools:context="com.pe1n.pokemon.activity.LoginActivity">

    <View
        android:id="@+id/center_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true" />

    <EditText
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:id="@+id/et_login_usn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_above="@id/center_line"
        android:layout_centerHorizontal="true"
        android:background="#DFFFFFFF"
        android:hint="@string/usn" />

    <ImageView
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/et_login_usn"
        android:layout_marginBottom="70dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/logo"/>

    <EditText
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:id="@+id/et_login_psw"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/center_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#DFFFFFFF"
        android:hint="@string/psw"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_login_psw"
        android:layout_centerHorizontal="true"
        android:background="#DFFF4500"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/login" />

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_register"
        android:layout_below="@id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register"/>

</RelativeLayout>
