<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">


    <!--下侧菜单-->
    <!--<android.support.design.widget.NavigationView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="500dp"-->
    <!--android:layout_gravity="bottom"-->
    <!--app:headerLayout="@layout/header_bottom_layout"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sandybrown"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layout_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11" />

        <RadioGroup
            android:id="@+id/rg_tab_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@mipmap/tab"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/text_seleted"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/btn_nearby"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/nearby"
                android:textColor="@color/text_seleted"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/btn_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/mine"
                android:textColor="@color/text_seleted"
                android:textSize="20sp" />

        </RadioGroup>

    </LinearLayout>


    <!--左侧菜单-->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/item_menu" />

</android.support.v4.widget.DrawerLayout>
